cleaning up css, removed image rendering crisp because de pixelated one was overwriting in and was useless. removed font family for fight items, text align was also not changing alignment, made flying pika a bit smaller, removing z-index as i put it there when i was fixing bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,49 +16,6 @@
   src: url("../fonts/LoRes12OT-BoldAltOakland.ttf");
 }
 
-
-#secondPicture {
-  width: 30%;
-  margin-bottom: -10%;
-  z-index: -2;
-}
-
-/* animation: dying of the pokemon after hit */
-@-webkit-keyframes die {
-  from { width:100%; height:100%; transform:rotate(0deg); filter: opacity(1);}
-  to { width:0; height: 0; transform:rotate(360deg); filter: opacity(0.20);}
-}
-@keyframes die { /*filter:blur(0px); */
-  from { width:100%; height:100%; transform:rotate(0deg); filter: opacity(1);}
-  to { width:0; height: 0; transform:rotate(360deg); filter: opacity(0.20);}
-}
-
-
-.text {
-  display: inline-block;
-  margin-left: -30%;
-  padding-inline: 10%;
-  text-align: center;
-  overflow: hidden;
-
-  /* The typwriter cursor */
-  white-space: nowrap;
-  /* Keeps the content on a single line */
-  /* Gives that scrolling effect as the typing happens */
-  /* Adjust as needed */
-  animation: typing1 8s;
-}
-
-img {
-  image-rendering: crisp-edges;
-  image-rendering: pixelated;
-}
-#pokeball, #candy, #rock{
-  display: inline-block;
-  font-family: LoRes, sans-serif;
-  text-align: center;
-
-}
 body {
   background-size: cover;
   overflow: hidden;
@@ -70,6 +27,11 @@ body {
   background-position: center;
   font-style: normal;
   font-weight: 100;
+}
+
+img {
+  image-rendering: crisp-edges;
+
 }
 
 h1 {
@@ -87,6 +49,26 @@ h1 {
   animation: typing 5s, blink-caret 0.3s ease-out infinite;
 }
 
+/*styling for insult, compliment and joke text*/
+.text {
+  display: inline-block;
+  margin-left: -30%;
+  padding-inline: 10%;
+  text-align: center;
+  overflow: hidden;
+
+  /* The typewriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  /* Gives that scrolling effect as the typing happens */
+  /* Adjust as needed */
+  animation: typing1 8s;
+}
+
+#pokeball, #candy, #rock{
+  display: inline-block;
+}
+
 .Intro {
   background-size: cover;
   background: no-repeat;
@@ -95,29 +77,25 @@ h1 {
 }
 /* .introButton */
 .Intro #introButton{
-  width: 40%;
-  height: 30%;
+  width: 50%;
+  height: 40%;
   border: none;
-  display: block;
+  background-color: transparent;
   background-image: url("../img/used/guessbtn_guess buttonn.svg");
   background-repeat: no-repeat;
-  background-color: rgba(148, 225, 255, 0);
   font-size: 2vw;
   background-position: center center;
-  font-family: LoRes, sans-serif;
-  background-size: contain;
-  z-index: 30000;
   position: absolute;
   top: 50%;
   left: 50%;
   margin-right: 50%;
   transform: translate(-50%, -50%);
 }
+
+/*intro image, this should have a better id name in html*/
 .Intro #intro {
-  top: 0;
   margin-left: -150%;
-  z-index: 3000000000;
-  height: 40%;
+  height: 20%;
   position: absolute;
   margin-top: 10%;
   -webkit-animation: myfirst 17s infinite;
@@ -431,3 +409,12 @@ section.fadeIn {
   }
 }
 
+/* animation: dying of the pokemon after hit */
+@-webkit-keyframes die {
+  from { width:100%; height:100%; transform:rotate(0deg); filter: opacity(1);}
+  to { width:0; height: 0; transform:rotate(360deg); filter: opacity(0.20);}
+}
+@keyframes die { /*filter:blur(0px); */
+  from { width:100%; height:100%; transform:rotate(0deg); filter: opacity(1);}
+  to { width:0; height: 0; transform:rotate(360deg); filter: opacity(0.20);}
+}
